--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,104 @@
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production builds
+/client/dist/
+/server/dist/
+/client/build/
+/server/build/
 dist/
+
+# Environment variables - NEVER COMMIT THESE
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
+.env.production.template
+**/.env
+**/.env.local
+**/.env.production
+**/.env.development
+client/.env*
+server/.env*
+!.env.example
+
+# IDE
 .vscode/
-client/node_modules/
-server/node_modules/
-client/dist/
-server/dist/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
 coverage/
+*.lcov
 .playwright/
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Sensitive files that should never be committed
+*.key
+*.pem
+*.p12
+*.pfx
+config/keys.js
+config/prod.js
